--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -25,7 +25,7 @@
 
 /* Ajustes para mostrar dos columnas por fila */
 .product-item {
-  width: calc(25% - 20px); /* Ancho del 50% con márgenes entre elementos */
+  width: calc(45% - 20px); /* Ancho del 50% con márgenes entre elementos */
   border: 1px solid #ccc;
   padding: 10px;
   margin-bottom: 20px;
@@ -45,6 +45,8 @@
   height: 200px; /* Altura fija para la imagen */
   margin: 0 auto;
   display: table;
+  width: 200px;
+  margin: 0 auto;
 }
 
 /* Resto de estilos para los elementos de producto */
