--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -6,11 +6,11 @@
     align-items: center;
     background-color: #333;
     color: white;
-    padding: 15px;
+    height: 60px;
+    font-size: 12px;
   }
   
   .logo {
-    font-size: 24px;
   }
   
   .navLinks {
